--- a/home/programs/waybar/custom.css
+++ b/home/programs/waybar/custom.css
@@ -1,3 +1,6 @@
+* {
+    font-family: "Cascadia Code NF";
+}
 
 window#waybar {
     background: transparent;
@@ -12,6 +15,7 @@ window#waybar.hidden {
     background-color: @base00;
     border-radius: 8px;
     border: 2px solid @base08;
+    margin-right: 8px;
 }
 
 #cpu {
@@ -59,6 +63,22 @@ window#waybar.hidden {
     margin-left: 0;
     padding-right: 8px;
     font-weight: bold;
+}
+
+#custom-peak-meter {
+    background-color: @base00;
+    border-radius: 8px 8px 8px 8px;
+    border: 2px solid @base08;
+    padding-right: 8px;
+    padding-left: 8px;
+}
+
+#custom-peak-meter.warn {
+    color: @base0A
+}
+
+#custom-peak-meter.peak {
+    color: @base08
 }
 
 #custom-music {
